Change all graphs to use Google charts, fix spacing issue

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -17,6 +17,7 @@ h1 {
 h2 {
   color: #666666;
   font-size: 3em;
+  margin-bottom: 0px;
 }
 h3 {
   font-size: 2em;
